src/components/status.css
/* ... */
.status .content-container.has-spoiler .spoiler ~ .content ~ * {
  opacity: 0.5;
}
.status .content-container.show-spoiler .spoiler {
  border-style: dotted;
}
.status .content-container.show-spoiler .spoiler ~ * {
  filter: none;
  pointer-events: auto;
  user-select: auto;
}
.status .content-container.has-spoiler .spoiler ~ .content ~ * {
  opacity: 1;
}

.status .content {
  margin-top: 8px;
}
.timeline-deck .status .content {
  max-height: 50vh;
  max-height: 50dvh;
  overflow: hidden;
  position: relative;
}
.timeline-deck .status .content.truncated {
  mask-image: linear-gradient(
    to top,
    transparent,
    rgba(0, 0, 0, 0.5) 1em,
    black 1.5em
  );
}
.timeline-deck .status .content.truncated:after {
  content: attr(data-read-more);
  line-height: 1;
  display: inline-block;
  position: absolute;
  inset-block-end: 1.5em;
  left: 50%;
  transform: translateX(-50%);
  color: var(--text-color);
  background-color: var(--bg-faded-color);
  border: 1px dashed var(--link-color);
  padding: 0.75em 1em;
  border-radius: 10em;
  font-size: 90%;
  white-space: nowrap;
  box-shadow: 0 0 0 1px var(--bg-color), 0 -5px 10px var(--bg-color),
    0 -5px 15px var(--bg-color), 0 -5px 20px var(--bg-color);
  transition: transform 0.5s ease-in-out;
}
.timeline-deck .status .content.truncated:hover:after {
  color: var(--link-color);
  transform: translateX(-50%) translateY(-2px) scale(1.01);
}
.status .content p {
  margin-block: 0.75em;
}
.status .content p:first-child {
  margin-block-start: 0;
}
.status .content p:last-child {
  margin-block-end: 0;
}
.status .content .invisible {
  display: none;
}
.status .content .ellipsis::after {
  content: '…';
}
.status.large .content {
  font-size: 150%;
  font-size: calc(100% + 50% / var(--content-text-weight));
}
.status.large .poll,
.status.large .actions {
  font-size: 125%;
  font-size: calc(100% + 25% / var(--content-text-weight));
}

/* MEDIA */

.status .media-container {
  margin-top: 8px;
  display: flex;
  flex-wrap: wrap;
  gap: 2px;
  flex-direction: row;
}
.status .media {
  flex-grow: 1;
  flex-basis: calc(50% - 8px);
  border-radius: 8px;
  overflow: hidden;
  max-height: 160px;
  min-height: 80px;
  border: 1px solid var(--outline-color);
}
.status .media:hover {
  border-color: var(--outline-hover-color);
}
.status .media.block {
  flex-basis: 100%;
  max-height: auto;
}
.status .media :is(img, video) {
  width: 100%;
  height: 100%;
  object-fit: cover;
  cursor: pointer;
}
@keyframes position-object {
  0% {
    object-position: 50% 50%;
  }
  25% {
    object-position: 0% 0%;
  }
  75% {
    object-position: 100% 100%;
  }
  100% {
    object-position: 50% 50%;
  }
}
.status .media img:hover {
  animation: position-object 5s ease-in-out 1s infinite;
}
.status .media video {
  width: 100%;
  height: 100%;
  object-fit: contain;
}
.status .media-video {
  position: relative;
}
.status .media-video:before {
  /* draw a circle in the middle */
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 70px;
  height: 70px;
  border-radius: 50%;
  background-color: var(--bg-blur-color);
  backdrop-filter: blur(6px) saturate(3) invert(0.2);
  z-index: 1;
}
.status .media-video:after {
  /* show play icon */
  content: '';
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-35%, -50%);
  width: 0;
  height: 0;
  border-style: solid;
  border-width: 15px 0 15px 26px;
  border-color: transparent transparent transparent
    var(--text-insignificant-color);
  pointer-events: none;
  opacity: 0.75;
  z-index: 2;
}
.status .media-video:hover:after {
  opacity: 1;
}
.status .media-gif video {
  object-fit: cover;
}
.status .media-audio {
  border: 0;
  min-height: 0;
}
.status .media-audio audio {
  width: 100%;
}

/* CARD */

.card {
  display: flex;
  margin-top: 8px;
  border-radius: 8px;
  border: 1px solid var(--outline-color);
  overflow: hidden;
  color: inherit;
  align-items: center;
  background: var(--bg-color);
}
.card .image {
  /* min-width: 120px; */
  width: 50%;
  max-width: 160px;
  height: auto;
  min-height: 120px;
  max-height: 160px;
  object-fit: cover;
  border-inline-end: 1px solid var(--outline-color);
}
.card:hover .image {
  animation: position-object 5s ease-in-out 1s infinite;
}
.card p {
  margin: 0;
}
.card .meta-container {
  padding: 8px;
  min-width: 0;
}
.card .title {
  line-height: 1.25;
  font-weight: normal;
  text-overflow: ellipsis;
  overflow: hidden;
  display: -webkit-box;
  display: box;
  -webkit-box-orient: vertical;
  box-orient: vertical;
  -webkit-line-clamp: 2;
  line-clamp: 2;
}
.card .meta {
  font-size: smaller;
  opacity: 0.75;
  margin: 0;
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
}
.card .meta.domain {
  opacity: 1;
  color: var(--link-color);
  white-space: nowrap;
  text-overflow: ellipsis;
  overflow: hidden;
  display: block;
}
a.card {
  text-decoration: none;
  transition: opacity 0.2s ease-in-out;
}
a.card:hover {
  border: 1px solid var(--outline-hover-color);
}
.card.video {
  max-width: 320px;
  max-height: 320px;
}
.card.video iframe {
  width: 100%;
  height: 100%;
}

/* POLLS */

.poll-option {
  margin-top: 8px;
  padding: 8px;
  display: flex;
  gap: 8px;
  justify-content: space-between;
  background-color: var(--bg-blur-color);
  background-image: linear-gradient(
    to right,
    var(--link-faded-color),
    var(--link-faded-color) var(--percentage),
    transparent var(--percentage),
    transparent
  );
  border-radius: 8px;
  border: 1px solid rgba(128, 128, 128, 0.1);
  align-items: center;
}
.poll-label {
  width: 100%;
  display: flex;
  gap: 8px;
  cursor: pointer;
}
.poll-option-votes {
  flex-shrink: 0;
  font-size: 90%;
}
.poll-option-leading .poll-option-votes {
  font-weight: bold;
}
.poll-vote-button {
  margin-top: 8px;
}
.poll-meta {
  margin: 8px 0;
  font-size: 90%;
}
.poll-option-title .icon {
  vertical-align: middle;
}
/* ... */

